Fixed alignment issue in inline form
Also added an extra class that can be added to more elements in the future to fix these kind of clearing issues.

--- a/css/yst_plugin_tools-302.css
+++ b/css/yst_plugin_tools-302.css
@@ -468,3 +468,7 @@ body.toplevel_page_wpseo_dashboard .wp-badge {
 	font-size: 14px;
 	font-weight: bold;
 }
+
+.wpseo-redirect-clear {
+	clear: both;
+}
